zkay/examples/type_errors/RepeatedAddhom.zkay
pragma zkay ^0.3.0;

contract RepeatedAddhom {

	function f(uint@me a) public {
		uint@me<+> x = addhom(addhom(a));
	}
}
